16955
```scala
object Test extends App {
  val list = List(1, 2, 3)
  val foo = list map (_.name)
  val bar = foo map (_.blah)
}
```
```scala
D:\Dropbox\Scratchpad\Scala>myke compile Test.scala
Test.scala:3: error: value name is not a member of Int
  val foo = list map (_.name)
                        ^
Test.scala:4: error: value blah is not a member of Nothing  <======= spurious error!
  val bar = foo map (_.blah)
                       ^
two errors found
```
